# alpr-unconstrained

./: .gitignore  PYCHARM.md  README.md  annotation-tool.py  create-model.py  get-networks.sh  license-plate-detection.py  license-plate-ocr.py  pyproject.toml  run.py  run.sh  train-detector.py  vehicle-detection.py  webapp.py
src/: data_generator.py  keras_utils.py  loss.py
templates/: index.html
