[project]
name = "alpr-unconstrained"
version = "2.0.0"
description = "License Plate Detection and Recognition in Unconstrained Scenarios"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "keras>=3.0,<4.0",
    "tensorflow>=2.15,<3.0",
    "opencv-python>=4.8,<5.0",
    "ultralytics>=8.0,<9.0",
    "paddleocr>=2.7,<3.0",
    "numpy>=1.24,<2.0",
    "flask>=3.0,<4.0",
]

[project.scripts]
alpr-webui = "webapp:main"

[project.urls]
Repository = "https://github.com/blackjaxx/alpr-unconstrained"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools]
py-modules = []
