[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpr-unconstrained"
version = "2.0.0"
description = "License Plate Detection and Recognition in Unconstrained Scenarios"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "S. M. Silva", email = "sergio@example.com"},
    {name = "blackjaxx (modern fork)", email = "blackjaxx@users.noreply.github.com"},
]
keywords = ["alpr", "license-plate", "computer-vision", "flask", "deep-learning", "yolo", "paddleocr"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "keras>=3.0,<4.0",
    "tensorflow>=2.15,<3.0",
    "opencv-python>=4.8,<5.0",
    "ultralytics>=8.0,<9.0",
    "paddleocr>=2.7,<3.0",
    "numpy>=1.24,<2.0",
    "flask>=3.0,<4.0",
    "werkzeug>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "flake8>=7.0",
    "ipython>=8.0",
]

[project.scripts]
alpr-webui = "webapp:main"
alpr-cli = "run:main"
alpr-train = "train-detector:main"

[project.urls]
Repository = "https://github.com/blackjaxx/alpr-unconstrained"
Issues = "https://github.com/blackjaxx/alpr-unconstrained/issues"
Paper = "http://sergiomsilva.com/pubs/alpr-unconstrained/"

[tool.setuptools]
packages = ["src"]
include-package-data = true

[tool.setuptools.package-data]
"src" = ["*.json", "*.h5"]

# PyCharm 2026.1 will autodiscover Flask app from these settings
[tool.flask]
app = "webapp:app"

# PyCharm / IDE-friendly formatting
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
